2.3.5:
-----
    * Fixed config option to disable the codebutton plugin.
    * Due to some server compat constraints, marked by the KCFINDER homepage,
      a new config option was set, to enable KCFINDER integration by user only.
        NOTE: This changes the previous enabled KCFINDER integration to disabled!!
    * To better document KCFINDER and ACF some en/de lang file constants changed

2.3.4:
-----
    * Some fixes to force zip install on demand method and some compat issues

2.3.3:
-----
    * Some tweaks to en, de lang files.
    * Fixed force_install to set new values to database config table.
    * Fixed Spartacus upgrade 'plugin_to_conf' again, by using 'external_plugin' hook, 
      which now forces a real HTTP request and falls down to plugins instance config.
      The previous (2.3.2) 'install_plugin' did do, but created another plugin instance.
      If you were hit by this, please just purge other ckeditor instances in your plugin list.
      To push to "all" upgraders, the zip version num was bumped to force a deflate.

      [PLEASE NOTE: For Upgraders coming from 2.3.1 and earlier, the upgrade zip effect 
       may possibly happen on next future upgrade only, thus force the zip upgrade by the
       new 'force_install' emergency option, if not happen automatically.]

2.3.2:
-----
    * Added config option to force zip install on demand, 
      which is easier than purge/install routines on zip upgrade failures
    * Fix and prepare installer fallback on upgrades
    * Added HTML5 AUDIO tag protected source rule and be catched by 
      procurator placeholder, to exclude from being touched by ACF

2.3.1:
-----
    * Fixed Chrome Browser Exception
    * Fixed installer fallback on upgrades

2.3.0:
-----
    * Check if zip extension loaded
    * Removed most of the inline code into 2 new files, which are:
         cke_config.js - the custom config.js file, which now substitutes every config option to CKE